<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Standard">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="2dp"
        android:minHeight="?actionBarSize"
        android:theme="@style/CustomBar"
        app:contentInsetStartWithNavigation="0dp"
        app:title="Standard"
        app:titleTextColor="#026939" />

    <EditText
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp"
        android:background="@null"
        android:editable="false"
        android:hint="@string/display"
        android:textAlignment="textEnd"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/screen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/screen"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/archivo_black"
        android:textColor="@color/black"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/screen3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/screen"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:fontFamily="@font/archivo_black"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_clr"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@+id/lineview"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/border"
        android:onClick="clear"
        android:text="@string/clear"
        android:textColor="#FF3737"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/btn_back"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@+id/lineview"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/hope"
        android:contentDescription="@string/backspace"
        android:onClick="hps"
        app:srcCompat="@drawable/hapus"
        tools:ignore="SpeakableTextPresentCheck" />

    <View
        android:id="@+id/lineview"
        android:layout_above="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.9"
        android:background="#026939"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentBottom="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_expo"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="expo"
                android:text="@string/exponent"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_parent"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="par"
                android:text="@string/parentheses"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_persen"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="persen"
                android:text="@string/persen"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_div"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="div"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="seven"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="eight"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="nine"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_mul"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="multi"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="four"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="five"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="six"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sub"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="sub"
                android:text="@string/subtract"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="one"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="two"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="three"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="add"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_pm"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="plus"
                android:text="@string/plusMinus"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="zero"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_point"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="dec"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_equ"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:backgroundTint="#026939"
                android:onClick="equ"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

</RelativeLayout>