<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Prog">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="2dp"
        android:minHeight="?actionBarSize"
        android:theme="@style/CustomBar"
        app:contentInsetStartWithNavigation="0dp"
        app:title="Programmer"
        app:titleTextColor="#026939" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:layout_below="@id/bar"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/ED"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:editable="false"
        android:textAlignment="textEnd"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_below="@id/ED"
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <TableRow
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/text1"
                android:layout_below="@id/ED"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="DEC"
                />
            <TextView
                android:id="@+id/text11"
                android:layout_below="@id/ED"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:textStyle="bold"
                android:textColor="#026939"
                android:textSize="20sp"
                android:text=""
                android:layout_marginLeft="10dp"
                android:textAlignment="textEnd"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text1"
                android:layout_marginStart="15dp"
                android:text="BIN"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/text22"
                android:layout_below="@id/text11"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:textStyle="bold"
                android:textColor="#026939"
                android:textSize="20sp"
                android:text=""
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:textAlignment="textEnd"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text2"
                android:layout_marginStart="15dp"
                android:text="OCT"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/text44"
                android:layout_below="@id/text22"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:textStyle="bold"
                android:textColor="#026939"
                android:textSize="20sp"
                android:text=""
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:textAlignment="textEnd"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text4"
                android:layout_marginStart="15dp"
                android:text="HEX"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/text33"
                android:layout_below="@id/text44"
                android:textAllCaps="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:textStyle="bold"
                android:textColor="#026939"
                android:textSize="20sp"
                android:text=""
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:textAlignment="textEnd"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentBottom="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_clr"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:backgroundTint="#FF3939"
                android:onClick="clear"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_a"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="BA"
                android:text="A"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_b"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="BB"
                android:text="B"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:backgroundTint="#026939"
                android:onClick="hps"
                app:srcCompat="@drawable/hapus"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="seven"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="eight"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="nine"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_c"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="BC"
                android:text="C"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="four"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="five"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="six"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_d"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="BD"
                android:text="D"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="one"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="two"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="three"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_e"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="BE"
                android:text="E"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_equ"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="zero"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_point"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="point"
                android:text="@string/plusMinus"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_f"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hope"
                android:onClick="BF"
                android:text="F"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>


</RelativeLayout>